package com.cdu.edu.course.publics;

import com.cdu.edu.course.AbstractCourse;

import javax.persistence.Entity;

/**
 * description:
 *
 * @author haifeng
 * @version 1.0
 * @date 2018/10/12 0012 下午 18:20
 * @since jdk
 */
@Entity
public class PublicCourse extends AbstractCourse {

}
